@@ -1,0 +1,7 @@
+Processing test55...
+
+Warnings...
+
+test_input/test55.py:6: Local variable (RuntimeError) not used
+test_input/test55.py:6: Setting exception to builtin (RuntimeError), consider () around exceptions
+test_input/test55.py:29: Setting exception to builtin (RuntimeError), consider () around exceptions
